src/Styles/_metadata.scss
.metadata {
  font-family: $small-font;
  font-size: $small-font-size;
  color: $secondary-text-color;
  margin-top: -6pt;
  line-height: $small-font-line-height;
}

article > .metadata {
  margin-left: 1.4em;
}

.os-win .metadata {
  font-size: $small-font-size-win;
  line-height: $small-font-line-height-win;
}

.metadata-group {
  margin-left: $border-thickness * 3;
  margin-right: $border-thickness * 3;
}

.metadata-icon {
  position: relative;
  display: inline-block;
  fill: $accent-hover-color;
  stroke: $accent-hover-color;
  width: 16px;
  height: 16px;
  top: 3px;
  transition: $animation-fast ease-out;
  cursor: pointer;
}

.metadata-icon:hover {
  fill: $primary-hover-color;
  stroke: $primary-hover-color;
}

.metadata-icon-readonly {
  cursor: default;
}

.metadata-icon-readonly:hover {
  fill: $accent-hover-color;
  stroke: $accent-hover-color;
}

.metadata-icon-toggled {
  fill: $primary-color;
  stroke: $primary-color;
}

.metadata-icon-readonly.metadata-icon-toggled {
  fill: $primary-light-color;
  stroke: $primary-light-color;
}

.metadata-icon-readonly.metadata-icon-toggled:hover {
  fill: $primary-light-color;
  stroke: $primary-light-color;
}

.metadata-icon-text {
  position: relative;
  top: 2px;
  color: $accent-hover-color;
  font-family: 'Wingdings';
  font-size: $small-font-size + 3;
}

.metadata-indicator-content {
  font-weight: normal;
  margin-left: -$border-thickness * 2;
}

.metadata-title {
  position: relative;
  top: -$border-thickness;
  color: $border-color;
  white-space: nowrap;
}

.os-win {
  .metadata-icon-text {
    font-size: $small-font-size-win + 3;
  }

  .metadata-icon-text.small {
    font-size: $small-font-size-win + 1;
  }
}

.tags {
  /* Prevent white-space from affecting layout */
  font-size: 0;
}

.tag {
  display: inline-block;
  color: $accent-text-color;
  background: $accent-color;
  font-size: $small-font-size;
  text-decoration: none;
  line-height: $small-font-size;
  margin-left: 2pt;
  margin-right: 2pt;
  padding: 6px 5pt 7px 5.5pt;
  cursor: pointer;
}

.tag:hover {
  background: $accent-hover-color;
}

.os-win .tag {
  padding: 4.5pt 7pt 6.5pt 8pt;
  font-size: $small-font-size-win;
  line-height: $small-font-size-win - 1.5;
}

.ie .tag {
  padding-top: 4pt;
  padding-bottom: 7pt;
}

.os-win.hi-dpi .tag {
  padding-top: 4pt;
  padding-bottom: 6pt;
}

.tag:before {
  content: '';
  position: absolute;
  border-top: 8pt solid transparent;
  border-left: 8pt solid $background-color;
  margin-left: -6.5pt;
  margin-top: 8pt;
  cursor: default;
}

.os-win .tag:before {
  border-top: 10pt solid transparent;
  border-left: 10pt solid $background-color;
  margin-top: 9pt;
  margin-left: -8pt;
}

.tag:after {
  content: '';
  position: absolute;
  float: right;
  border-bottom: 8pt solid transparent;
  border-right: 8pt solid $background-color;
  margin-left: -2pt;
  margin-top: -4.5pt;
  cursor: default;
}

.os-win .tag:after {
  border-bottom: 10pt solid transparent;
  border-right: 10pt solid $background-color;
  margin-left: 0;
}

a.tag:hover {
  color: $accent-text-color;
}

